crates/cli/src/snapshots/mltrs_cli__build_tasks__tests__alignment_tests@src__generated__shader_atlas__pointer_params_compute.rs.snap
---
source: crates/cli/src/build_tasks.rs
info:
  relative_path: src/generated/shader_atlas/pointer_params_compute.rs
---
// GENERATED FILE (do not edit directly)

//! generated from slang compute shader: pointer_params.compute.slang

use std::ffi::CString;
use std::io::Cursor;

use ash::util::read_spv;
use serde::Serialize;

use crate::renderer::render_graph::GPUWrite;
use crate::renderer::*;
use crate::shaders::atlas::{ComputeShaderAtlasEntry, PrecompiledShader};
use crate::shaders::json::{ComputeReflectionJson, ReflectedPipelineLayout};

// glam must be built without its scalar-math feature (GPU layouts need align-16 Vec4)
const _: () = assert!(std::mem::align_of::<glam::Vec4>() == 16);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(16))]
pub struct Params {
    pub data: Addr<PtrItem>,
    pub src: ReadAddr<PtrItem>,
    pub lut: ImmutableAddr<PtrItem>,
    pub count: u32,
    pub _padding_0: [u8; 4],
}

impl GPUWrite for Params {}
const _: () = assert!(std::mem::size_of::<Params>() == 32);
const _: () = assert!(std::mem::offset_of!(Params, data) == 0);
const _: () = assert!(std::mem::size_of::<Addr<PtrItem>>() == 8);
const _: () = assert!(std::mem::offset_of!(Params, src) == 8);
const _: () = assert!(std::mem::size_of::<ReadAddr<PtrItem>>() == 8);
const _: () = assert!(std::mem::offset_of!(Params, lut) == 16);
const _: () = assert!(std::mem::size_of::<ImmutableAddr<PtrItem>>() == 8);
const _: () = assert!(std::mem::offset_of!(Params, count) == 24);
const _: () = assert!(std::mem::size_of::<u32>() == 4);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(8))]
pub struct PtrItem {
    pub a: glam::Vec2,
    pub b: f32,
    pub _padding_0: [u8; 4],
}

impl GPUWrite for PtrItem {}
const _: () = assert!(std::mem::size_of::<PtrItem>() == 16);
const _: () = assert!(std::mem::offset_of!(PtrItem, a) == 0);
const _: () = assert!(std::mem::size_of::<glam::Vec2>() == 8);
const _: () = assert!(std::mem::offset_of!(PtrItem, b) == 8);
const _: () = assert!(std::mem::size_of::<f32>() == 4);

pub struct Resources<'a> {
    pub params_buffer: &'a UniformBufferHandle<Params>,
}

#[derive(Debug, Clone, Copy)]
pub struct ParamsData {
    pub count: u32,
}

#[derive(Debug, Clone, Copy)]
pub struct ParamsBindings {
    pub data: BufferBinding<PtrItem>,
    pub src: ReadBufferBinding<PtrItem>,
    pub lut: ImmutableBufferBinding<PtrItem>,
}

impl GraphParamBindingSet for ParamsBindings {
    type Pending = PendingParamBindings<Self>;

    fn pending() -> Self::Pending {
        Self::Pending::new()
    }
}

impl GraphBindingSet for ParamsBindings {
    fn visit(&self, f: &mut dyn FnMut(GraphBinding)) {
        f(GraphBinding::Buffer(self.data.erased()));
        f(GraphBinding::Buffer(self.src.erased()));
        f(GraphBinding::Buffer(self.lut.erased()));
    }
}
/// Complete graph inputs before resource references resolve to GPU values.
#[derive(Debug, Clone, Copy)]
pub struct ParamsInput {
    pub data: BufferBinding<PtrItem>,
    pub src: ReadBufferBinding<PtrItem>,
    pub lut: ImmutableBufferBinding<PtrItem>,
    pub count: u32,
}

impl GraphShaderParams for Params {
    type Data = ParamsData;
    type Bindings = ParamsBindings;
    type Input = ParamsInput;

    fn input(data: &Self::Data, bindings: &Self::Bindings) -> Self::Input {
        Self::Input {
            count: data.count,
            data: bindings.data,
            src: bindings.src,
            lut: bindings.lut,
        }
    }

    fn assemble_input(input: &Self::Input, resolver: &BindingResolver<'_>) -> Self {
        Self {
            data: resolver.buf(input.data),
            src: resolver.read_buf(input.src),
            lut: resolver.immutable_buf(input.lut),
            count: input.count,
            _padding_0: Default::default(),
        }
    }
}

impl GraphBindingSet for ParamsInput {
    fn visit(&self, f: &mut dyn FnMut(GraphBinding)) {
        f(GraphBinding::Buffer(self.data.erased()));
        f(GraphBinding::Buffer(self.src.erased()));
        f(GraphBinding::Buffer(self.lut.erased()));
    }
}

pub const WORKGROUP_SIZE: [u32; 3] = [64, 1, 1];

#[derive(Clone)]
pub struct Shader {
    pub reflection_json: ComputeReflectionJson,
}

impl Shader {
    pub fn init() -> Self {
        let json_str = include_str!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/pointer_params.comp.json"
        ));

        let reflection_json: ComputeReflectionJson = serde_json::from_str(json_str).unwrap();

        Self { reflection_json }
    }

    pub fn pipeline_config<'a>(
        &self,
        resources: Resources<'a>,
    ) -> ComputePipelineConfig<'a, NoPush> {
        // NOTE each of these must be in descriptor set layout order in the reflection json

        #[rustfmt::skip]
        let texture_handles = vec![
        ];

        #[rustfmt::skip]
        let uniform_buffer_handles = vec![
            RawUniformBufferHandle::from_typed(resources.params_buffer),
        ];

        #[rustfmt::skip]
        let storage_texture_handles = vec![
        ];

        ComputePipelineConfigBuilder {
            shader: Box::new(self.clone()),
            texture_handles,
            uniform_buffer_handles,
            storage_texture_handles,
        }
        .build()
    }

    fn comp_entry_point_name(&self) -> CString {
        let entry_point = self
            .reflection_json
            .compute_entry_point
            .entry_point_name
            .clone();

        CString::new(entry_point).unwrap()
    }

    fn comp_spv(&self) -> Vec<u32> {
        let bytes = include_bytes!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/pointer_params.comp.spv"
        ));
        let byte_reader = &mut Cursor::new(bytes);
        read_spv(byte_reader).expect("failed to convert spv byte layout")
    }
}

impl ComputeShaderAtlasEntry for Shader {
    fn source_file_name(&self) -> &str {
        &self.reflection_json.source_file_name
    }

    fn layout_bindings(&self) -> Vec<Vec<LayoutDescription>> {
        self.reflection_json.layout_bindings()
    }

    fn precompiled_compute_shader(&self) -> PrecompiledShader {
        PrecompiledShader {
            entry_point_name: self.comp_entry_point_name(),
            spv_bytes: self.comp_spv(),
        }
    }

    fn pipeline_layout(&self) -> &ReflectedPipelineLayout {
        &self.reflection_json.pipeline_layout
    }

    fn workgroup_size(&self) -> [u32; 3] {
        self.reflection_json.workgroup_size
    }

    fn reflection_json(&self) -> &ComputeReflectionJson {
        &self.reflection_json
    }
}
