crates/cli/src/snapshots/mltrs_cli__build_tasks__tests__alignment_tests@src__generated__shader_atlas__pointer_pointee_layout.rs.snap
---
source: crates/cli/src/build_tasks.rs
info:
  relative_path: src/generated/shader_atlas/pointer_pointee_layout.rs
---
// GENERATED FILE (do not edit directly)

//! generated from slang shader: pointer_pointee_layout.shader.slang

use std::ffi::CString;
use std::io::Cursor;

use ash::util::read_spv;
use ash::vk;
use serde::Serialize;

#[allow(unused_imports)]
use crate::renderer::gpu_read::GPURead;
use crate::renderer::render_graph::GPUWrite;
#[allow(unused)]
use crate::renderer::vertex_description::{NoVertex, VertexDescription};
use crate::renderer::*;
use crate::shaders::atlas::{PrecompiledShader, PrecompiledShaders, ShaderAtlasEntry};
use crate::shaders::json::{ReflectedPipelineLayout, ReflectionJson};

// glam must be built without its scalar-math feature (GPU layouts need align-16 Vec4)
const _: () = assert!(std::mem::align_of::<glam::Vec4>() == 16);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(16))]
pub struct Params {
    pub scale: f32,
    pub _padding_0: [u8; 4],
    pub items: Addr<HostileData>,
    pub post: glam::Vec2,
    pub _padding_1: [u8; 8],
}

impl GPUWrite for Params {}
const _: () = assert!(std::mem::size_of::<Params>() == 32);
const _: () = assert!(std::mem::offset_of!(Params, scale) == 0);
const _: () = assert!(std::mem::size_of::<f32>() == 4);
const _: () = assert!(std::mem::offset_of!(Params, items) == 8);
const _: () = assert!(std::mem::size_of::<Addr<HostileData>>() == 8);
const _: () = assert!(std::mem::offset_of!(Params, post) == 16);
const _: () = assert!(std::mem::size_of::<glam::Vec2>() == 8);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(16))]
pub struct HostileData {
    pub a: glam::Vec3,
    pub b: f32,
    pub c: f32,
    pub _padding_0: [u8; 12],
    pub d: glam::Vec4,
    pub ia: InnerA,
    pub e: f32,
    pub _padding_1: [u8; 4],
    pub ib: InnerB,
    pub f: f32,
    pub _padding_2: [u8; 4],
}

impl GPUWrite for HostileData {}
const _: () = assert!(std::mem::size_of::<HostileData>() == 112);
const _: () = assert!(std::mem::offset_of!(HostileData, a) == 0);
const _: () = assert!(std::mem::size_of::<glam::Vec3>() == 12);
const _: () = assert!(std::mem::offset_of!(HostileData, b) == 12);
const _: () = assert!(std::mem::size_of::<f32>() == 4);
const _: () = assert!(std::mem::offset_of!(HostileData, c) == 16);
const _: () = assert!(std::mem::size_of::<f32>() == 4);
const _: () = assert!(std::mem::offset_of!(HostileData, d) == 32);
const _: () = assert!(std::mem::size_of::<glam::Vec4>() == 16);
const _: () = assert!(std::mem::offset_of!(HostileData, ia) == 48);
const _: () = assert!(std::mem::size_of::<InnerA>() == 32);
const _: () = assert!(std::mem::offset_of!(HostileData, e) == 80);
const _: () = assert!(std::mem::size_of::<f32>() == 4);
const _: () = assert!(std::mem::offset_of!(HostileData, ib) == 88);
const _: () = assert!(std::mem::size_of::<InnerB>() == 16);
const _: () = assert!(std::mem::offset_of!(HostileData, f) == 104);
const _: () = assert!(std::mem::size_of::<f32>() == 4);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(8))]
pub struct InnerB {
    pub p: glam::Vec2,
    pub q: f32,
    pub _padding_0: [u8; 4],
}

impl GPUWrite for InnerB {}
const _: () = assert!(std::mem::size_of::<InnerB>() == 16);
const _: () = assert!(std::mem::offset_of!(InnerB, p) == 0);
const _: () = assert!(std::mem::size_of::<glam::Vec2>() == 8);
const _: () = assert!(std::mem::offset_of!(InnerB, q) == 8);
const _: () = assert!(std::mem::size_of::<f32>() == 4);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(16))]
pub struct InnerA {
    pub x: f32,
    pub _padding_0: [u8; 12],
    pub v: glam::Vec3,
    pub _padding_1: [u8; 4],
}

impl GPUWrite for InnerA {}
const _: () = assert!(std::mem::size_of::<InnerA>() == 32);
const _: () = assert!(std::mem::offset_of!(InnerA, x) == 0);
const _: () = assert!(std::mem::size_of::<f32>() == 4);
const _: () = assert!(std::mem::offset_of!(InnerA, v) == 16);
const _: () = assert!(std::mem::size_of::<glam::Vec3>() == 12);

pub struct Resources<'a> {
    pub params_buffer: &'a UniformBufferHandle<Params>,
}

impl GPURead for HostileData {
    const GPU_SIZE: usize = 112;

    fn read_gpu(bytes: &[u8]) -> anyhow::Result<Self> {
        anyhow::ensure!(
            bytes.len() == Self::GPU_SIZE,
            "invalid GPU readback byte length for HostileData"
        );

        Ok(Self {
            a: glam::Vec3::from_array(<[f32; 3] as GPURead>::read_gpu(&bytes[0..12])?),
            b: GPURead::read_gpu(&bytes[12..16])?,
            c: GPURead::read_gpu(&bytes[16..20])?,
            _padding_0: [0; 12],
            d: GPURead::read_gpu(&bytes[32..48])?,
            ia: GPURead::read_gpu(&bytes[48..80])?,
            e: GPURead::read_gpu(&bytes[80..84])?,
            _padding_1: [0; 4],
            ib: GPURead::read_gpu(&bytes[88..104])?,
            f: GPURead::read_gpu(&bytes[104..108])?,
            _padding_2: [0; 4],
        })
    }
}

impl GPURead for InnerB {
    const GPU_SIZE: usize = 16;

    fn read_gpu(bytes: &[u8]) -> anyhow::Result<Self> {
        anyhow::ensure!(
            bytes.len() == Self::GPU_SIZE,
            "invalid GPU readback byte length for InnerB"
        );

        Ok(Self {
            p: GPURead::read_gpu(&bytes[0..8])?,
            q: GPURead::read_gpu(&bytes[8..12])?,
            _padding_0: [0; 4],
        })
    }
}

impl GPURead for InnerA {
    const GPU_SIZE: usize = 32;

    fn read_gpu(bytes: &[u8]) -> anyhow::Result<Self> {
        anyhow::ensure!(
            bytes.len() == Self::GPU_SIZE,
            "invalid GPU readback byte length for InnerA"
        );

        Ok(Self {
            x: GPURead::read_gpu(&bytes[0..4])?,
            _padding_0: [0; 12],
            v: glam::Vec3::from_array(<[f32; 3] as GPURead>::read_gpu(&bytes[16..28])?),
            _padding_1: [0; 4],
        })
    }
}

#[derive(Debug, Clone, Copy)]
pub struct ParamsData {
    pub scale: f32,
    pub post: glam::Vec2,
}

#[derive(Debug, Clone, Copy)]
pub struct ParamsBindings {
    pub items: BufferBinding<HostileData>,
}

impl GraphParamBindingSet for ParamsBindings {
    type Pending = PendingParamBindings<Self>;

    fn pending() -> Self::Pending {
        Self::Pending::new()
    }
}

impl GraphBindingSet for ParamsBindings {
    fn visit(&self, f: &mut dyn FnMut(GraphBinding)) {
        f(GraphBinding::Buffer(self.items.erased()));
    }
}
/// Complete graph inputs before resource references resolve to GPU values.
#[derive(Debug, Clone, Copy)]
pub struct ParamsInput {
    pub scale: f32,
    pub items: BufferBinding<HostileData>,
    pub post: glam::Vec2,
}

impl GraphShaderParams for Params {
    type Data = ParamsData;
    type Bindings = ParamsBindings;
    type Input = ParamsInput;

    fn input(data: &Self::Data, bindings: &Self::Bindings) -> Self::Input {
        Self::Input {
            scale: data.scale,
            post: data.post,
            items: bindings.items,
        }
    }

    fn assemble_input(input: &Self::Input, resolver: &BindingResolver<'_>) -> Self {
        Self {
            scale: input.scale,
            _padding_0: Default::default(),
            items: resolver.buf(input.items),
            post: input.post,
            _padding_1: Default::default(),
        }
    }
}

impl GraphBindingSet for ParamsInput {
    fn visit(&self, f: &mut dyn FnMut(GraphBinding)) {
        f(GraphBinding::Buffer(self.items.erased()));
    }
}

#[derive(Clone)]
pub struct Shader {
    pub reflection_json: ReflectionJson,
}

impl Shader {
    pub fn init() -> Self {
        let json_str = include_str!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/pointer_pointee_layout.json"
        ));

        let reflection_json: ReflectionJson = serde_json::from_str(json_str).unwrap();

        Self { reflection_json }
    }

    pub fn pipeline_config<'a>(
        &self,
        resources: Resources<'a>,
    ) -> PipelineConfig<'a, NoVertex, DrawVertexCount, NoPush> {
        // NOTE each of these must be in descriptor set layout order in the reflection json

        #[rustfmt::skip]
        let texture_handles = vec![
        ];

        #[rustfmt::skip]
        let uniform_buffer_handles = vec![
            RawUniformBufferHandle::from_typed(resources.params_buffer),
        ];

        #[rustfmt::skip]
        let storage_texture_handles = vec![
        ];

        PipelineConfigBuilder {
            shader: Box::new(self.clone()),
            texture_handles,
            uniform_buffer_handles,
            storage_texture_handles,
        }
        .build_vertex_count()
    }

    fn vert_entry_point_name(&self) -> CString {
        let entry_point = self
            .reflection_json
            .vertex_entry_point
            .entry_point_name
            .clone();

        CString::new(entry_point).unwrap()
    }

    fn frag_entry_point_name(&self) -> CString {
        let entry_point = self
            .reflection_json
            .fragment_entry_point
            .entry_point_name
            .clone();

        CString::new(entry_point).unwrap()
    }

    fn vert_spv(&self) -> Vec<u32> {
        let bytes = include_bytes!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/pointer_pointee_layout.vert.spv"
        ));
        let byte_reader = &mut Cursor::new(bytes);
        read_spv(byte_reader).expect("failed to convert spv byte layout")
    }

    fn frag_spv(&self) -> Vec<u32> {
        let bytes = include_bytes!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/pointer_pointee_layout.frag.spv"
        ));
        let byte_reader = &mut Cursor::new(bytes);
        read_spv(byte_reader).expect("failed to convert spv byte layout")
    }
}

impl ShaderAtlasEntry for Shader {
    fn source_file_name(&self) -> &str {
        &self.reflection_json.source_file_name
    }

    fn vertex_binding_descriptions(&self) -> Vec<vk::VertexInputBindingDescription> {
        vec![]
    }

    fn vertex_attribute_descriptions(&self) -> Vec<vk::VertexInputAttributeDescription> {
        vec![]
    }

    fn layout_bindings(&self) -> Vec<Vec<LayoutDescription>> {
        self.reflection_json.layout_bindings()
    }

    fn precompiled_shaders(&self) -> PrecompiledShaders {
        let vert = PrecompiledShader {
            entry_point_name: self.vert_entry_point_name(),
            spv_bytes: self.vert_spv(),
        };

        let frag = PrecompiledShader {
            entry_point_name: self.frag_entry_point_name(),
            spv_bytes: self.frag_spv(),
        };

        PrecompiledShaders { vert, frag }
    }

    fn pipeline_layout(&self) -> &ReflectedPipelineLayout {
        &self.reflection_json.pipeline_layout
    }

    fn reflection_json(&self) -> &ReflectionJson {
        &self.reflection_json
    }
}
