crates/cli/src/snapshots/mltrs_cli__build_tasks__tests__alignment_tests@src__generated__shader_atlas__push_constants.rs.snap
---
source: crates/cli/src/build_tasks.rs
info:
  relative_path: src/generated/shader_atlas/push_constants.rs
---
// GENERATED FILE (do not edit directly)

//! generated from slang shader: push_constants.shader.slang

use std::ffi::CString;
use std::io::Cursor;

use ash::util::read_spv;
use ash::vk;
use serde::Serialize;

#[allow(unused_imports)]
use crate::renderer::gpu_read::GPURead;
use crate::renderer::render_graph::GPUWrite;
#[allow(unused)]
use crate::renderer::vertex_description::{NoVertex, VertexDescription};
use crate::renderer::*;
use crate::shaders::atlas::{PrecompiledShader, PrecompiledShaders, ShaderAtlasEntry};
use crate::shaders::json::{ReflectedPipelineLayout, ReflectionJson};

// glam must be built without its scalar-math feature (GPU layouts need align-16 Vec4)
const _: () = assert!(std::mem::align_of::<glam::Vec4>() == 16);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(16))]
pub struct DrawConstants {
    pub scale: f32,
    pub _padding_0: [u8; 4],
    pub tex: BindlessHandle<Sampler2D>,
    pub inner: DrawInner,
    pub tail: f32,
    pub _padding_1: [u8; 4],
    pub model: glam::Mat4,
}

impl GPUWrite for DrawConstants {}
const _: () = assert!(std::mem::size_of::<DrawConstants>() == 96);
const _: () = assert!(std::mem::offset_of!(DrawConstants, scale) == 0);
const _: () = assert!(std::mem::size_of::<f32>() == 4);
const _: () = assert!(std::mem::offset_of!(DrawConstants, tex) == 8);
const _: () = assert!(std::mem::size_of::<BindlessHandle<Sampler2D>>() == 8);
const _: () = assert!(std::mem::offset_of!(DrawConstants, inner) == 16);
const _: () = assert!(std::mem::size_of::<DrawInner>() == 8);
const _: () = assert!(std::mem::offset_of!(DrawConstants, tail) == 24);
const _: () = assert!(std::mem::size_of::<f32>() == 4);
const _: () = assert!(std::mem::offset_of!(DrawConstants, model) == 32);
const _: () = assert!(std::mem::size_of::<glam::Mat4>() == 64);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(8))]
pub struct DrawInner {
    pub v: glam::Vec2,
}

impl GPUWrite for DrawInner {}
const _: () = assert!(std::mem::size_of::<DrawInner>() == 8);
const _: () = assert!(std::mem::offset_of!(DrawInner, v) == 0);
const _: () = assert!(std::mem::size_of::<glam::Vec2>() == 8);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(16))]
pub struct Params {
    pub tint: glam::Vec4,
}

impl GPUWrite for Params {}
const _: () = assert!(std::mem::size_of::<Params>() == 16);
const _: () = assert!(std::mem::offset_of!(Params, tint) == 0);
const _: () = assert!(std::mem::size_of::<glam::Vec4>() == 16);

pub struct Resources<'a> {
    pub params_buffer: &'a UniformBufferHandle<Params>,
}

impl GPURead for DrawInner {
    const GPU_SIZE: usize = 8;

    fn read_gpu(bytes: &[u8]) -> anyhow::Result<Self> {
        anyhow::ensure!(
            bytes.len() == Self::GPU_SIZE,
            "invalid GPU readback byte length for DrawInner"
        );

        Ok(Self {
            v: GPURead::read_gpu(&bytes[0..8])?,
        })
    }
}

impl GPURead for Params {
    const GPU_SIZE: usize = 16;

    fn read_gpu(bytes: &[u8]) -> anyhow::Result<Self> {
        anyhow::ensure!(
            bytes.len() == Self::GPU_SIZE,
            "invalid GPU readback byte length for Params"
        );

        Ok(Self {
            tint: GPURead::read_gpu(&bytes[0..16])?,
        })
    }
}

#[derive(Debug, Clone, Copy)]
pub struct DrawConstantsData {
    pub scale: f32,
    pub inner: DrawInner,
    pub tail: f32,
    pub model: glam::Mat4,
}

#[derive(Debug, Clone, Copy)]
pub struct DrawConstantsBindings {
    pub tex: SampledTexBinding,
}

impl GraphParamBindingSet for DrawConstantsBindings {
    type Pending = PendingParamBindings<Self>;

    fn pending() -> Self::Pending {
        Self::Pending::new()
    }
}

impl GraphBindingSet for DrawConstantsBindings {
    fn visit(&self, f: &mut dyn FnMut(GraphBinding)) {
        f(GraphBinding::SampledTex(self.tex));
    }
}
/// Complete graph inputs before resource references resolve to GPU values.
#[derive(Debug, Clone, Copy)]
pub struct DrawConstantsInput {
    pub scale: f32,
    pub tex: SampledTexBinding,
    pub inner: DrawInner,
    pub tail: f32,
    pub model: glam::Mat4,
}

impl GraphShaderParams for DrawConstants {
    type Data = DrawConstantsData;
    type Bindings = DrawConstantsBindings;
    type Input = DrawConstantsInput;

    fn input(data: &Self::Data, bindings: &Self::Bindings) -> Self::Input {
        Self::Input {
            scale: data.scale,
            inner: data.inner,
            tail: data.tail,
            model: data.model,
            tex: bindings.tex,
        }
    }

    fn assemble_input(input: &Self::Input, resolver: &BindingResolver<'_>) -> Self {
        Self {
            scale: input.scale,
            _padding_0: Default::default(),
            tex: resolver.sampled_tex(input.tex),
            inner: input.inner,
            tail: input.tail,
            _padding_1: Default::default(),
            model: input.model,
        }
    }
}

impl GraphBindingSet for DrawConstantsInput {
    fn visit(&self, f: &mut dyn FnMut(GraphBinding)) {
        f(GraphBinding::SampledTex(self.tex));
    }
}

/// Complete graph inputs before resource references resolve to GPU values.
#[derive(Debug, Clone, Copy)]
pub struct ParamsInput {
    pub tint: glam::Vec4,
}

impl GraphShaderParams for Params {
    type Data = Self;
    type Bindings = ();
    type Input = ParamsInput;

    fn input(data: &Self::Data, _bindings: &Self::Bindings) -> Self::Input {
        Self::Input { tint: data.tint }
    }

    fn assemble_input(input: &Self::Input, _resolver: &BindingResolver<'_>) -> Self {
        Self { tint: input.tint }
    }
}

impl GraphBindingSet for ParamsInput {
    fn visit(&self, _f: &mut dyn FnMut(GraphBinding)) {}
}

impl crate::renderer::render_graph::PushConstantBlock for DrawConstants {}
// 128 bytes is the vulkan-guaranteed maxPushConstantsSize
const _: () = assert!(std::mem::size_of::<DrawConstants>() <= 128);

#[derive(Clone)]
pub struct Shader {
    pub reflection_json: ReflectionJson,
}

impl Shader {
    pub fn init() -> Self {
        let json_str = include_str!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/push_constants.json"
        ));

        let reflection_json: ReflectionJson = serde_json::from_str(json_str).unwrap();

        Self { reflection_json }
    }

    pub fn pipeline_config<'a>(
        &self,
        resources: Resources<'a>,
    ) -> PipelineConfig<'a, NoVertex, DrawVertexCount, PushBlock<DrawConstants>> {
        // NOTE each of these must be in descriptor set layout order in the reflection json

        #[rustfmt::skip]
        let texture_handles = vec![
        ];

        #[rustfmt::skip]
        let uniform_buffer_handles = vec![
            RawUniformBufferHandle::from_typed(resources.params_buffer),
        ];

        #[rustfmt::skip]
        let storage_texture_handles = vec![
        ];

        PipelineConfigBuilder {
            shader: Box::new(self.clone()),
            texture_handles,
            uniform_buffer_handles,
            storage_texture_handles,
        }
        .build_vertex_count()
    }

    fn vert_entry_point_name(&self) -> CString {
        let entry_point = self
            .reflection_json
            .vertex_entry_point
            .entry_point_name
            .clone();

        CString::new(entry_point).unwrap()
    }

    fn frag_entry_point_name(&self) -> CString {
        let entry_point = self
            .reflection_json
            .fragment_entry_point
            .entry_point_name
            .clone();

        CString::new(entry_point).unwrap()
    }

    fn vert_spv(&self) -> Vec<u32> {
        let bytes = include_bytes!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/push_constants.vert.spv"
        ));
        let byte_reader = &mut Cursor::new(bytes);
        read_spv(byte_reader).expect("failed to convert spv byte layout")
    }

    fn frag_spv(&self) -> Vec<u32> {
        let bytes = include_bytes!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/push_constants.frag.spv"
        ));
        let byte_reader = &mut Cursor::new(bytes);
        read_spv(byte_reader).expect("failed to convert spv byte layout")
    }
}

impl ShaderAtlasEntry for Shader {
    fn source_file_name(&self) -> &str {
        &self.reflection_json.source_file_name
    }

    fn vertex_binding_descriptions(&self) -> Vec<vk::VertexInputBindingDescription> {
        vec![]
    }

    fn vertex_attribute_descriptions(&self) -> Vec<vk::VertexInputAttributeDescription> {
        vec![]
    }

    fn layout_bindings(&self) -> Vec<Vec<LayoutDescription>> {
        self.reflection_json.layout_bindings()
    }

    fn precompiled_shaders(&self) -> PrecompiledShaders {
        let vert = PrecompiledShader {
            entry_point_name: self.vert_entry_point_name(),
            spv_bytes: self.vert_spv(),
        };

        let frag = PrecompiledShader {
            entry_point_name: self.frag_entry_point_name(),
            spv_bytes: self.frag_spv(),
        };

        PrecompiledShaders { vert, frag }
    }

    fn pipeline_layout(&self) -> &ReflectedPipelineLayout {
        &self.reflection_json.pipeline_layout
    }

    fn reflection_json(&self) -> &ReflectionJson {
        &self.reflection_json
    }
}
